# sight-list

./: Cargo.toml  LICENSE-APACHE-2.0.txt  README.md  builder.nu  flake.nix  hashes.toml  mod.nu  zellij.kdl
db/: 01_init.sql
src/: lib.rs  main.rs  objects.rs  sight_list_error.rs
src/objects/: contexts.rs  db.rs
static/: style.css
templates/: error.hbs  head.hbs  index.html.hbs  kml.hbs  list_edit.hbs  list_page.html.hbs  lists.hbs  sight_edit.hbs  sight_list.hbs
