[package]
name = "sight-list"
version = "1.2.1"
edition = "2021"
authors = ["Hannes Hochreiner <hannes@hochreiner.net>"]
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0", features = ["uuid"] }
rocket_dyn_templates = { version = "0.2.0", features = ["handlebars"] }
rocket_db_pools = { version = "0.2.0", features = ["sqlx_postgres"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.111"
thiserror = "1.0.56"
encoding_rs = "0.8.33"
regex = "1.10.4"
sha256 = "1.5.0"
uuid = { version = "1.8.0", features = ["v4", "serde"] }
chrono = "0.4.37"
markdown = "0.3.0"

[dependencies.sqlx]
version = "0.7.4"
features = ["postgres", "uuid"]
