[package]
name = "sight-list"
version = "1.4.0"
edition = "2021"
authors = ["Hannes Hochreiner <hannes@hochreiner.net>"]
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5", features = ["uuid"] }
rocket_dyn_templates = { version = "0.2", features = ["handlebars"] }
rocket_db_pools = { version = "0.2", features = ["sqlx_postgres"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
encoding_rs = "0.8"
regex = "1.10"
sha256 = "1.5"
uuid = { version = "1.10", features = ["v4", "serde"] }
chrono = "0.4"
markdown = "0.3"

[dependencies.sqlx]
version = "0.7.4"
features = ["postgres", "uuid"]
